package Ejercicio_Entornos_Objetos;

public interface Habitos {
    void ejercicio();
    void alimentacion();
    void bebida();
}
